--- a/templates/index.html
+++ b/templates/index.html
@@ -48,8 +48,8 @@
           </div>
         </nav>
     </header>
-    <div class="bg-image masthead name-div" >
-      <div class="head-div">
+    <div class=" name-div" >
+      <div class="head-div masthead">
         <img src="{{url_for('static', filename='img/mike2-new.png')}}" class="my-pic">
         <h1 class="h1-1" >
             Michael Ibezim
