--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -23,7 +23,7 @@ font-family: Montserrat-Black;
 vertical-align: revert;
 }
 .head-div {
-padding: 50px 0 150px;
+padding: 100px 0 0px;
 text-align: centre
 }
 
@@ -33,8 +33,7 @@ line-height: 1.5;
 font-size: 20px;
 }
 .masthead {
-  height: 100vh;
-  min-height: 400px;
+  min-height: 500px;
   background-image: url('https://images.unsplash.com/photo-1536183922588-166604504d5e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8ODB8fHN5c3RlbSUyMHRlY2hub2xvZ3klMjBkYXJrfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60');
   background-position: center;
   background-repeat: no-repeat;
@@ -57,7 +56,7 @@ text-align: center;
 font-family: Montserrat-Black;
 }
 .about-div {
-padding: 100px 0 100px;w
+padding: 7% 15%;
 }
 .about-p {
 color: #8f8f8f;
