--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,7 +18,7 @@
 <!--navigation section-->
 
     <header>
-        <nav class="navbar navbar-expand-md bg-light fixed-top" id="navbar">
+        <nav class="navbar navbar-expand-lg bg-light fixed-top" id="navbar">
           <div class="container-fluid">
             <a class="navbar-brand" href="{{url_for('home')}}"><img class="favicon" src="{{url_for('static', filename='img/favicon.ico')}}">i-Dev</a>
             <button class="navbar-toggler" id="nav-button" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
