--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Mi-Dev</title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="{{url_for('static', filename='img/favicon.ico')}}">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
@@ -49,8 +50,8 @@
           </div>
         </nav>
     </header>
-    <div class=" name-div" >
-      <div class="head-div masthead">
+    <div class=" name-div masthead" >
+      <div class="head-div ">
         <img src="{{url_for('static', filename='img/mike2-new.png')}}" class="my-pic">
         <h1 class="h1-1" >
             Michael Ibezim
@@ -65,15 +66,14 @@
 
 <!--    name section-->
     <section id="about">
-      <div class="about-div">
-        <h1>
+      <div class="container-fluid about-div">
+        <h2>
             About
-        </h1>
+        </h2>
         <p class="about-p">
             I am one of the best in this field, and it's all thanks to the incredible relationships I formed with my clients. I invested in developing a personal connection with each and every one of my customers, by providing quality service and being available to you 24/7. Cant wait to here from you
         </p>
       </div>
-
 
     </section>
 <!--contact section-->
