main.py modified

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
                   </a>
                   <ul class="dropdown-menu" id="dropdown">
                     <li><a class="dropdown-item" href="https://michaels-blog-u.onrender.com/">Blog</a></li>
-                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><a class="dropdown-item" href="https://hotels-production.up.railway.app/">Hotels</a></li>
                   </ul>
                 </li>
                 <li class="nav-item">
